Update 'UrlFilter' regular expression.

Fix issues with URLs that end with ')' and ':'.

BUG: 210871
FIXED-IN: 4.9.4

REVIEW: 107340